--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 pool:
-  vmImage: 'ubuntu-16.04'
+  vmImage: ubuntu-16.04
 trigger:
   - master
 steps:
@@ -13,7 +13,7 @@ steps:
       command: install
   - script: 'npm test'
     displayName: 'Run unit tests'
-    continueOnError:  true
+    continueOnError: true
   - task: PublishTestResults@2
     displayName: 'Publish Test Results'
     condition: succeededOrFailed()
@@ -32,10 +32,10 @@ steps:
       rootFolderOrFile: $(Build.SourcesDirectory)
       includeRootFolder: false
   - task: CopyFiles@2
-    displayName: 'Copy ARM templates to: $(build.artifactstagingdirectory)/Templates'
+    displayName: 'Copy ARM templates'
     inputs:
       SourceFolder: deployment
       Contents: '*.json'
-      TargetFolder: '$(build.artifactstagingdirectory)/Templates'
+      TargetFolder: $(build.artifactstagingdirectory)/Templates
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
